--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,10 +18,28 @@
 @import 'bootstrap';
 
 .navbar, .home-callout {
-  //Gradient provided by @_ighosh at uiGradients.com
+  //Gradient provided by @_ighosh at uiGradients.com #Mojito
   background: #1D976C;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #93F9B9, #1D976C);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #93F9B9, #1D976C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.navbar-default .navbar-brand {
+  color: white;
+}
+
+.navbar-default .navbar-brand:hover{
+  color: #B34F4B;
+  opacity: 0.90;
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: white;
+}
+
+.navbar-default .navbar-nav > li > a:hover {
+  color: #B34F4B;
+  opacity: 0.90;
 }
 
 .navbar {
