--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+//Background Gradient
 .navbar, .home-callout {
   //Gradient provided by @_ighosh at uiGradients.com #Mojito
   background: #1D976C;  /* fallback for old browsers */
@@ -24,28 +25,21 @@
   background: linear-gradient(to left, #93F9B9, #1D976C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.navbar-default .navbar-brand {
-  color: white;
-}
-
-.navbar-default .navbar-brand:hover{
-  color: #B34F4B;
-  opacity: 0.90;
-}
-
-.navbar-default .navbar-nav > li > a {
-  color: white;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color: #B34F4B;
-  opacity: 0.90;
-}
-
+// Nav Styles
 .navbar {
   border: none;
 }
 
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
+  color: white;
+  &:hover {
+    color: #B34F4B;
+    opacity: 0.90;
+  }
+}
+
+// Homepage Styles
 .home-callout {
   margin-top: -20px;
   padding-bottom: 100px;
@@ -53,7 +47,7 @@
   color: white;
 }
 
-
+//Typography Styles
 h1,h2,h3 {
   font-family: 'Mukta', sans-serif;
 }
