Updated about page, updated logo with Font-family and wight

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,9 @@
+<div class="container-fluid text-center">
 <h1>About Page</h1>
-<h2>More about us later on.</h2>
+<p>We are DevMatch. Our company focues on creating an exclusive community
+for developers and entrepreuers to meet.
+
+
+</p>
+</div>
+
