--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,10 @@
           <% end %>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
+          <div class="nav navbar-nav navbar-right">
+            <%= link_to "Log In", new_user_session_url, class: "btn btn-default navbar-btn" %>
+            <%= link_to "Sign Up", new_user_registration_url, class: "btn btn-default navbar-btn" %>
+          </div>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "About", about_url %></li>
             <li><%= link_to "Contact Us", new_contact_url %></li>
