--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,6 +66,10 @@
   color: white;
 }
 
+.home-signup-links {
+  margin-top: 30px;
+}
+
 //Typography Styles
 h1,h2,h3 {
   font-family: 'Mukta', sans-serif;
