--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
         <nav class="navbar navbar-default navbar-static-top" role="navigation">
-      <div class="container-fluid">
+      <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -30,7 +30,6 @@
               <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
             <% else %>
               <%= link_to "Log In", new_user_session_url, class: "btn btn-default navbar-btn" %>
-              <%= link_to "Sign Up", new_user_registration_url, class: "btn btn-default navbar-btn" %>
             <% end %>
           </div>
           <ul class="nav navbar-nav navbar-right">
