--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,7 +23,7 @@
        <div class="well">
          <h2 class="text-center">The Community</h2>
          <p>Visit the Community</p>
-         <%= link_to "Visit the community", "#", class: "btn btn-default btn-lg btn-block" %>
+         <%= link_to "Visit the community", "/user", class: "btn btn-default btn-lg btn-block" %>
        </div>
      </div>
     <% else %>
