--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,5 @@
 <div class="container-fluid text-center">
-<h1>About Page</h1>
-<p>We are DevMatch. Our company focues on creating an exclusive community
-for developers and entrepreuers to meet.
-</p>
+<h1>About Us</h1>
+<p>We are DevMatch. Our company focues on creating an exclusive community 
+for developers, investors and entrepreuers to meet.</p>
 </div>
